Corrected page jumping on button hovers by applying a transparent border in the appropriate element state.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -25,8 +25,8 @@ h1 {
 
 button {
     background-color: #CE9C2B;
+    border: 1px solid transparent;
     color: white;
-    border: none;
     padding: 10px 30px;
     cursor: pointer;
     transition: all 0.3s ease;
@@ -315,7 +315,7 @@ button.delete, button.increment, button.decrement {
 
 button.delete:hover, button.increment:hover, button.decrement:hover {
     background-color: #CE9C2B;
-    border: none;
+    border: 1px solid transparent;
     color: #ffffff; 
 }
 
